[project]
name = "play-ground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Suhaib Umair", email = "154515857+MuhammedSuhaib@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.0.19",
]

[project.scripts]
play-ground = "play_ground:main"
go = "play_ground.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
