[project]
name = "play-ground"
version = "0.1.0"
description = "A simple Ai Agent that can search from internet"
readme = "README.md"
authors = [
    { name = "Suhaib Umair", email = "154515857+MuhammedSuhaib@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "openai-agents>=0.0.19",
    "tavily-python>=0.7.11",
]

[project.scripts]
play-ground = "play_ground:main"
go = "play_ground.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
